# anchor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cross  Dockerfile.devnet  Makefile  README.md
.claude/agents/: code-reviewer-subagent.md  logging-subagent.md
.githooks/: pre-commit
.github/: mergify.yml  wordlist.txt
.github/custom/local-testnet/: params.yaml  test_anchor_proposal.yaml
.github/workflows/: book.yml  claude-code-action.yml  claude-mentions.yml  claude-pr-review.yml  docker.yml  docs.yml  linkcheck.yml  local-testnet.yml  pr-checks.yml  release.yml  test-suite.yml
anchor/: Cargo.toml
anchor/client/: Cargo.toml
anchor/client/src/: cli.rs  config.rs  key.rs  lib.rs  metrics.rs  notifier.rs
anchor/common/api_types/: Cargo.toml
anchor/common/api_types/src/: lib.rs
anchor/common/bls_lagrange/: Cargo.toml
anchor/common/bls_lagrange/src/: blsful.rs  blst.rs  lib.rs
anchor/common/global_config/: Cargo.toml
anchor/common/global_config/src/: data_dir.rs  lib.rs
anchor/common/operator_key/: Cargo.toml
anchor/common/operator_key/src/: encrypted.rs  legacy.rs  lib.rs  public.rs  unencrypted.rs
anchor/common/operator_key/test_keys/: encrypted_legacy_anchor.txt  encrypted_private_key.json  encrypted_private_key_legacy.json
anchor/common/qbft/: Cargo.toml
anchor/common/qbft/src/: config.rs  error.rs  lib.rs  msg_container.rs  qbft_types.rs  tests.rs
anchor/common/ssv_network_config/built_in_network_configs/hoodi/: ssv_boot_enr.yaml  ssv_contract_address.txt  ssv_domain_type.txt
anchor/common/ssv_network_config/src/: lib.rs
anchor/common/ssv_types/: Cargo.toml
anchor/common/ssv_types/src/: cluster.rs  committee.rs  consensus.rs  domain_type.rs  lib.rs  message.rs  msgid.rs  operator.rs  partial_sig.rs  round.rs  share.rs  sql_conversions.rs  test_utils.rs  util.rs
anchor/common/version/: Cargo.toml
anchor/common/version/src/: lib.rs
anchor/database/: Cargo.toml
anchor/database/src/: cluster_operations.rs  error.rs  keysplit_operations.rs  lib.rs  multi_index.rs  operator_operations.rs  schema.rs  share_operations.rs  slashing.rs  sql_operations.rs  state.rs  table_schema.sql  validator_operations.rs
anchor/database/src/tests/: cluster_tests.rs  metadata_tests.rs  mod.rs  operator_tests.rs  state_tests.rs  utils.rs  validator_tests.rs
anchor/duties_tracker/: Cargo.toml
anchor/duties_tracker/src/: duties_tracker.rs  lib.rs
anchor/eth/: Cargo.toml  README.md  execution.rs
anchor/eth/src/: error.rs  event_parser.rs  event_processor.rs  index_sync.rs  lib.rs  metrics.rs  network_actions.rs  sync.rs  util.rs  voluntary_exit_processor.rs
anchor/eth/tests/: integration.rs  operator_lifecycle.rs
anchor/eth/tests/common/: mod.rs
anchor/fuzz/: .gitignore  Cargo.toml
anchor/fuzz/fuzz_targets/: custom_ssz.rs  qbft_target.rs  receive_target.rs  setup.rs  validate_target.rs
anchor/http_api/: Cargo.toml
anchor/http_api/src/: config.rs  lib.rs  router.rs
anchor/http_metrics/: Cargo.toml
anchor/http_metrics/src/: lib.rs
anchor/keygen/: Cargo.toml  README.md
anchor/keygen/src/: encryption.rs  lib.rs
anchor/keysplit/: Cargo.toml  README.md
anchor/keysplit/src/: cli.rs  crypto.rs  error.rs  keystore.rs  lib.rs  output.rs  split.rs  util.rs
anchor/logging/: Cargo.toml
anchor/logging/src/: count_layer.rs  format.rs  lib.rs  logging.rs  tracing_libp2p_discv5_layer.rs  utils.rs
anchor/message_receiver/: Cargo.toml
anchor/message_receiver/src/: lib.rs  manager.rs  testing.rs
anchor/message_sender/: Cargo.toml
anchor/message_sender/src/: impostor.rs  lib.rs  network.rs  testing.rs
anchor/message_validator/: Cargo.toml
anchor/message_validator/src/: consensus_message.rs  consensus_state.rs  duty_state.rs  lib.rs  message_counts.rs  partial_signature.rs
anchor/message_validator/src/duties/: duties_tracker.rs  mod.rs
anchor/network/: Cargo.toml
anchor/network/src/: behaviour.rs  config.rs  discovery.rs  keypair_utils.rs  lib.rs  metrics.rs  network.rs  peer_manager.rs  peer_score_config.rs  transport.rs
anchor/network/src/handshake/: codec.rs  mod.rs  node_info.rs
anchor/network/src/handshake/envelope/: mod.rs
anchor/network/src/peer_manager/: blocking.rs  connection.rs  discovery.rs  heartbeat.rs  mod.rs  types.rs
anchor/network/src/scoring/: message_rate.rs  mod.rs  peer_score_config.rs  topic_score_config.rs
anchor/operator_doppelganger/: Cargo.toml
anchor/operator_doppelganger/src/: lib.rs  service.rs
anchor/processor/: Cargo.toml
anchor/processor/src/: lib.rs  metrics.rs  receivers.rs  senders.rs  work.rs
anchor/processor/tests/: processor_tests.rs
anchor/qbft_manager/: Cargo.toml
anchor/qbft_manager/src/: instance.rs  lib.rs  tests.rs  timeout.rs
anchor/signature_collector/: Cargo.toml
anchor/signature_collector/src/: lib.rs
anchor/src/: environment.rs  environment_windows.rs  logging.rs  main.rs
anchor/subnet_service/: Cargo.toml
anchor/subnet_service/src/: lib.rs  scoring.rs  service.rs  subnet.rs
anchor/subnet_tracker/src/: lib.rs
anchor/tests/: cli_exit_codes.rs
anchor/validator_store/: Cargo.toml
anchor/validator_store/src/: lib.rs  metadata_service.rs  metrics.rs  registration_service.rs  sync_committee_service.rs
anchor/voluntary_exit/: Cargo.toml
anchor/voluntary_exit/src/: lib.rs  voluntary_exit_processor.rs  voluntary_exit_tracker.rs
book/src/: SUMMARY.md  advanced.md  advanced_networking.md  cli.md  installation.md  running_node.md  setup.md
docs/: README.md  package-lock.json  package.json  sync-version.js  vocs.config.ts
docs/docs/pages/: advanced_usage.mdx  cli-keygen.mdx  cli-keysplit.mdx  cli-node.mdx  cli.mdx  contributing.mdx  development_environment.mdx  faq.mdx  handshake.mdx  index.mdx  installation.mdx  introduction.mdx  metrics.mdx  migrate_to_anchor.mdx  protocol_developers.mdx  running_a_validator_on_ssv.mdx  running_an_operator.mdx  what_is_ssv.mdx
metrics/: README.md
metrics/dashboards/: anchor-dash.json
metrics/scrape-targets/: scrape-targets.json
