[workspace]
# Extra tooling projects will be added.
members = [
    "anchor",
    "anchor/client",
    "anchor/common/api_types",
    "anchor/common/bls_lagrange",
    "anchor/common/global_config",
    "anchor/common/operator_key",
    "anchor/common/qbft",
    "anchor/common/ssv_network_config",
    "anchor/common/ssv_types",
    "anchor/common/version",
    "anchor/database",
    "anchor/duties_tracker",
    "anchor/eth",
    "anchor/http_api",
    "anchor/http_metrics",
    "anchor/keygen",
    "anchor/keysplit",
    "anchor/logging",
    "anchor/message_receiver",
    "anchor/message_sender",
    "anchor/message_validator",
    "anchor/network",
    "anchor/operator_doppelganger",
    "anchor/processor",
    "anchor/qbft_manager",
    "anchor/signature_collector",
    "anchor/subnet_service",
    "anchor/validator_store",
]

resolver = "2"

[workspace.package]
edition = "2024"

# This table has three subsections: first the internal dependencies, then the lighthouse dependencies, then all other.
[workspace.dependencies]
anchor_validator_store = { path = "anchor/validator_store" }
api_types = { path = "anchor/common/api_types" }
bls_lagrange = { path = "anchor/common/bls_lagrange" }
client = { path = "anchor/client" }
database = { path = "anchor/database" }
duties_tracker = { path = "anchor/duties_tracker" }
eth = { path = "anchor/eth" }
global_config = { path = "anchor/common/global_config" }
http_api = { path = "anchor/http_api" }
http_metrics = { path = "anchor/http_metrics" }
keygen = { path = "anchor/keygen" }
keysplit = { path = "anchor/keysplit" }
logging = { path = "anchor/logging" }
message_receiver = { path = "anchor/message_receiver" }
message_sender = { path = "anchor/message_sender" }
message_validator = { path = "anchor/message_validator" }
network = { path = "anchor/network" }
operator_doppelganger = { path = "anchor/operator_doppelganger" }
operator_key = { path = "anchor/common/operator_key" }
processor = { path = "anchor/processor" }
qbft = { path = "anchor/common/qbft" }
qbft_manager = { path = "anchor/qbft_manager" }
signature_collector = { path = "anchor/signature_collector" }
ssv_network_config = { path = "anchor/common/ssv_network_config" }
ssv_types = { path = "anchor/common/ssv_types" }
subnet_service = { path = "anchor/subnet_service" }
version = { path = "anchor/common/version" }

# Lighthouse commit is `v8.0.0`
beacon_node_fallback = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
bls = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
eth2 = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
eth2_keystore = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
eth2_network_config = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
health_metrics = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
metrics = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
network_utils = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
sensitive_url = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
slashing_protection = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
slot_clock = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
task_executor = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
types = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
validator_metrics = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
validator_services = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
validator_store = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }
workspace_members = { git = "https://github.com/sigp/lighthouse", rev = "e3ee7feb" }

alloy = { version = "1.2.1", features = [
    "sol-types",
    "transports",
    "json",
    "contract",
    "pubsub",
    "provider-ws",
    "rpc-types",
    "rlp",
] }
arbitrary = "1.4.1"
async-channel = "1.9"
axum = "0.8.1"
base64 = "0.22.1"
blst = "0.3.14"
# the custom repo is needed because they fix to a specific version of blst, which conflicts with the line above
blstrs_plus = { git = "https://github.com/dknopik/blstrs", branch = "pls" }
clap = { version = "4.5.15", features = ["derive", "wrap_help"] }
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["full"] }
dirs = "6.0.0"
discv5 = { version = "0.10", features = ["libp2p"] }
enr = "0.13.0"
ethereum_ssz = "0.9"
ethereum_ssz_derive = "0.9"
futures = "0.3.30"
# Target sigp-gossipsub as of 2/10/25
gossipsub = { package = "libp2p-gossipsub", git = "https://github.com/sigp/rust-libp2p.git", rev = "fabf27f", features = [
    "metrics",
] }
hex = "0.4.3"
hyper = "1.4"
indexmap = "2.7.0"
libp2p = { version = "0.56", default-features = false }
lru = "0.16.0"
multiaddr = "0.18.2"
num_cpus = "1"
once_cell = "1.21.3"
openssl = "0.10.72"
parking_lot = "0.12"
pbkdf2 = "0.12.2"
prometheus-client = "0.23.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rand = "0.9"
reqwest = "0.12.12"
rpassword = "7.4.0"
rusqlite = "0.28.0"
safe_arith = "0.1.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
sha2 = "0.10.8"
ssz_types = "0.11.0"
strum = { version = "0.27.0", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.39.2", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "signal",
    "sync",
    "macros",
] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tree_hash = "0.10"
tree_hash_derive = "0.10"
typenum = "1.18"
vsss-rs = "5.1.0"
zeroize = "1.8.1"

# todo: remove when there is a proper release for peer-store.
[patch.'https://github.com/libp2p/rust-libp2p.git']
libp2p-core = "=0.43.1"
libp2p-swarm = "=0.47.0"

[profile.maxperf]
inherits = "release"

codegen-units = 1
incremental = false
lto = "fat"
