[package]
name = "client"
version = "0.2.0"
authors = ["Sigma Prime <contact@sigmaprime.io"]
edition = { workspace = true }

[lib]
name = "client"
path = "src/lib.rs"

[dependencies]
anchor_validator_store = { workspace = true }
beacon_node_fallback = { workspace = true }
clap = { workspace = true }
database = { workspace = true }
dirs = { workspace = true }
duties_tracker = { workspace = true }
eth = { workspace = true }
eth2 = { workspace = true }
ethereum_hashing = "0.7.0"
fdlimit = "0.3"
global_config = { workspace = true }
http_api = { workspace = true }
http_metrics = { workspace = true }
hyper = { workspace = true }
keygen = { workspace = true }
logging = { workspace = true }
message_receiver = { workspace = true }
message_sender = { workspace = true }
message_validator = { workspace = true }
multiaddr = { workspace = true }
network = { workspace = true }
openssl = { workspace = true }
operator_key = { workspace = true }
parking_lot = { workspace = true }
processor = { workspace = true }
qbft = { workspace = true }
qbft_manager = { workspace = true }
sensitive_url = { workspace = true }
serde = { workspace = true }
signature_collector = { workspace = true }
slashing_protection = { workspace = true }
slot_clock = { workspace = true }
ssv_network_config = { workspace = true }
ssv_types = { workspace = true }
strum = { workspace = true }
subnet_service = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
unused_port = { workspace = true }
validator_metrics = { workspace = true }
validator_services = { workspace = true }
version = { workspace = true }
zeroize = { workspace = true }
