[package]
name = "eth"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[[bin]]
name = "execution"
path = "execution.rs"

[dependencies]
alloy = { workspace = true }
base64 = { workspace = true }
database = { workspace = true }
fastrand = "2.3.0"
futures = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
openssl = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
ssv_network_config = { workspace = true }
ssv_types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
types = { workspace = true }
