[package]
name = "eth"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
alloy = { workspace = true }
anchor_validator_store = { workspace = true }
beacon_node_fallback = { workspace = true }
database = { workspace = true }
duties_tracker = { workspace = true }
eth2 = { workspace = true }
fastrand = "2.3.0"
futures = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
metrics = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
sensitive_url = { workspace = true }
slashing_protection = { workspace = true }
slot_clock = { workspace = true }
ssv_network_config = { workspace = true }
ssv_types = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
tower = "0.5.2"
tracing = { workspace = true }
types = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
database = { workspace = true, features = ["test-utils"] }
tempfile = "3.12"
tracing-subscriber = "0.3"
