[package]
name = "anchor-fuzz"
version = "0.0.0"
publish = false
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "validate_target"
path = "fuzz_targets/validate_target.rs"
test = false
doc = false
bench = false

[[bin]]
name = "receive_target"
path = "fuzz_targets/receive_target.rs"
test = false
doc = false
bench = false

[[bin]]
name = "qbft_target"
path = "fuzz_targets/qbft_target.rs"
test = false
doc = false
bench = false

[[bin]]
name = "custom_ssz"
path = "fuzz_targets/custom_ssz.rs"
test = false
doc = false
bench = false

[features]
arbitrary-fuzz = ["ssv_types/arbitrary-fuzz"]

[dependencies]
arbitrary = { workspace = true }
async-channel = { workspace = true }
bls = { workspace = true }
dashmap = { workspace = true }
database = { workspace = true }
ethereum_ssz = { workspace = true }
futures = { workspace = true }
gossipsub = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
libfuzzer-sys = "0.4"
libp2p = { workspace = true }
message_receiver = { workspace = true }
message_sender  = { workspace = true }
message_validator = { workspace = true }
openssl = { workspace = true }
parking_lot = { workspace = true }
processor = { workspace = true }
qbft = { workspace = true, features = ["arbitrary-fuzz"] }
qbft_manager = { workspace = true }
sha2 = { workspace = true }
signature_collector = { workspace = true }
slot_clock = { workspace = true }
ssv_types = { workspace = true, features = ["arbitrary-fuzz"] }
subnet_tracker  = { workspace = true }
task_executor = { workspace = true }
tempfile = "3.14.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
