[package]
name = "keygen"
version = "1.1.0-rc.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
base64 = { workspace = true }
clap = { workspace = true }
global_config = { workspace = true }
openssl = { workspace = true }
operator_key = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
