[package]
name = "message_sender"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
database = { workspace = true }
ethereum_ssz = { workspace = true }
openssl = { workspace = true }
processor = { workspace = true }
ssv_types = { workspace = true }
subnet_tracker = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
testing = []
