[package]
name = "message_sender"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
ethereum_ssz = { workspace = true }
message_validator = { workspace = true }
openssl = { workspace = true }
processor = { workspace = true }
slot_clock = { workspace = true }
ssv_types = { workspace = true }
subnet_tracker = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
testing = []
