[package]
name = "message_sender"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[features]
testing = []

[dependencies]
database = { workspace = true }
ethereum_ssz = { workspace = true }
message_validator = { workspace = true }
openssl = { workspace = true }
processor = { workspace = true }
slot_clock = { workspace = true }
ssv_types = { workspace = true }
subnet_service = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
