[package]
name = "network"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
async-trait = "0.1.85"
dirs = { workspace = true }
discv5 = { workspace = true }
ethereum_ssz = "0.8.1"
ethereum_ssz_derive = "0.8.1"
futures = { workspace = true }
hex = "0.4.3"
libp2p = { version = "0.54", default-features = false, features = [
  "identify",
  "yamux",
  "noise",
  "secp256k1",
  "tcp",
  "tokio",
  "macros",
  "gossipsub",
  "quic",
  "ping",
  "request-response",
] }
lighthouse_network = { workspace = true }
quick-protobuf = "0.8.1"
serde = { workspace = true }
serde_json = "1.0.137"
ssv_types = { workspace = true }
ssz_types = "0.10"
subnet_tracker = { workspace = true }
task_executor = { workspace = true }
thiserror = "1.0.69"
tokio = { workspace = true }
tracing = { workspace = true }
version = { workspace = true }

[dev-dependencies]
async-channel = { workspace = true }
libp2p-swarm = { version = "0.45.1", features = ["macros"] }
libp2p-swarm-test = { version = "0.4.0" }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tracing-subscriber = { workspace = true }
