[package]
name = "network"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
async-trait = "0.1.85"
dirs = { workspace = true }
discv5 = { workspace = true }
ethereum_ssz = { workspace = true }
futures = { workspace = true }
global_config = { workspace = true }
gossipsub = { workspace = true }
hex = "0.4.3"
libp2p = { workspace = true, default-features = false, features = [
  "identify",
  "yamux",
  "noise",
  "secp256k1",
  "tcp",
  "tokio",
  "macros",
  "quic",
  "ping",
  "request-response",
  "dns",
  "metrics",
] }
message_receiver = { workspace = true }
metrics = { workspace = true }
network_utils = { workspace = true }
peer-store = { package = "libp2p-peer-store", git = "https://github.com/libp2p/rust-libp2p.git", rev = "d63dab1" }
prometheus-client = { workspace = true }
quick-protobuf = "0.8.1"
rand = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.137"
ssv_types = { workspace = true }
ssz_types = "0.11.0"
subnet_service = { workspace = true }
task_executor = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
twox-hash = "2.1.2"
types = { workspace = true }
version = { workspace = true }

[dev-dependencies]
libp2p-swarm-test = "0.6.0"
message_receiver = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time", "test-util"] }
tracing-subscriber = { workspace = true }
